<resources>
    <string name="app_name">Memegram</string>
    <string name="create_acc">Create account</string>
    <string name="invite_edit_text">Enter the invite</string>
    <string name="reg_but_text">Registration</string>
    <string name="memegram">MemeGram</string>
    <string name="nick_hint_text">Enter nickname</string>
    <string name="LogIn">Log in</string>
    <string name="Registration">Registration</string>
    <string name="slide_to_cancel">&lt; Slide to cancel</string>
    <string name="recording_locked">Recording locked</string>
    <string name="delete_chat">Delete chat</string>
    <string name="clear_history">Clear history</string>
    <string name="confirm_delete_chat">Are you sure you want to delete this chat?</string>
    <string name="confirm_clear_history">Are you sure you want to clear message history?</string>
    <string name="also_delete_for">Also delete for %s</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>