<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494D4E"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="#A80000"
        android:text="@string/reg_but_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16ssp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:autofillHints=""
        android:background="@drawable/rounded_white"
        android:hint="@string/invite_edit_text"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="#9E9E9E"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_50sdp"
        android:autofillHints=""
        android:background="@drawable/rounded_white"
        android:hint="@string/nick_hint_text"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="#9E9E9E"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memegram"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>